[gd_scene load_steps=7 format=3 uid="uid://p0lt5frr2lxa"]

[ext_resource type="Script" path="res://scripts/multiplayer/game_manager.gd" id="1_hkswb"]
[ext_resource type="PackedScene" uid="uid://c26siogmy1l2f" path="res://scenes/world/world.tscn" id="1_meb3y"]
[ext_resource type="PackedScene" uid="uid://2l2wfhlphuem" path="res://scenes/ui/debug_ui.tscn" id="1_my32x"]
[ext_resource type="Script" path="res://scripts/multiplayer/networks/network_manager.gd" id="2_a3uxx"]
[ext_resource type="PackedScene" uid="uid://w482w0w2x31k" path="res://scenes/entities/character_scenes/player.tscn" id="2_l1e6r"]
[ext_resource type="PackedScene" uid="uid://bd75nn2huo38l" path="res://scenes/ui/lobby_screen.tscn" id="4_h5od1"]

[node name="Game" type="Node"]
script = ExtResource("1_hkswb")

[node name="NetworkManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_a3uxx")

[node name="World" parent="." instance=ExtResource("1_meb3y")]

[node name="Player" parent="." instance=ExtResource("2_l1e6r")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/entities/character_scenes/multiplayer_player.tscn")
spawn_path = NodePath("../MultiplayerPlayers")
spawn_limit = 4

[node name="MultiplayerPlayers" type="Node3D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="LobbyScreen" parent="UI" instance=ExtResource("4_h5od1")]
unique_name_in_owner = true

[node name="DebugUI" parent="UI" instance=ExtResource("1_my32x")]
unique_name_in_owner = true
